Implement two number Fibonacci