@@ -5,6 +5,6 @@ import java.util.List;
 
 public class Fibonacci {
     public List<Integer> getSequence(int n) {
-        return Collections.singletonList(0);
+        return n == 1 ? Collections.singletonList(0) : List.of(0, 1);
     }
 }
